tests/derive/enum.stderr
error: derive(Query) may only be applied to structs
 --> $DIR/enum.rs:4:6
  |
4 | enum Foo {}
  |      ^^^

error: derive(Bundle) does not support enums or unions
 --> $DIR/enum.rs:7:6
  |
7 | enum Bar {}
  |      ^^^
